cmake_minimum_required(VERSION 3.23)
project(GUISML)

set(CMAKE_CXX_STANDARD 23)
include_directories(libs/SFML/include)
set(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake_modules" ${CMAKE_MODULE_PATH})
find_package(SFML 2.5.1 REQUIRED system graphics audio network REQUIRED)
add_executable(start main.cpp Engine.cpp Input.cpp Update.cpp Vadim.cpp Draw.cpp)
target_link_libraries(start sfml-audio sfml-graphics sfml-network sfml-system sfml-window)
find_package(OpenGL REQUIRED)
if (OpenGL_FOUND)
    include_directories(${OpenGL_INCLUDE_DIR})
    target_link_libraries(start ${OpenGL_LIBRARIES})
    target_link_libraries(start GL)
endif()
